--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
 </head>
 
 <body>
-
-
+    <div class="container">
+        <div class="firstRow">
+            <button class="clearButton">AC</button>
+            <button class="changeSign">+/-</button>
+            <button class="percentage">%</button>
+            <button class="divideButton">/</button>
+        </div>
+        <div class="secondRow">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button class="multiplyButton">*</button>
+        </div>
+        <div class="thirdRow">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button class="subtractButton">-</button>
+        </div>
+        <div class="fourthRow">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button class="addButton">+</button>
+        </div>
+        <div class="lastRow">
+            <button>0</button>
+            <button>.</button>
+            <button class="equalButton">=</button>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
