Add CSS Styles for the calculator

--- a/index.html
+++ b/index.html
@@ -9,37 +9,40 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="firstRow">
-            <button class="clearButton">AC</button>
-            <button class="changeSign">+/-</button>
-            <button class="percentage">%</button>
-            <button class="divideButton">/</button>
+    <main>
+        <div class="container">
+            <div class="display">000</div>
+            <div class="firstRow">
+                <button class="clearButton">AC</button>
+                <button class="changeSign ">+/-</button>
+                <button class="percentage number ">%</button>
+                <button class="divideButton number operation">/</button>
+            </div>
+            <div class="secondRow">
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="multiplyButton number operation">*</button>
+            </div>
+            <div class="thirdRow">
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="subtractButton number operation">-</button>
+            </div>
+            <div class="fourthRow">
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="addButton number operation">+</button>
+            </div>
+            <div class="lastRow">
+                <button class="number zeroButton">0</button>
+                <button>.</button>
+                <button class="equalButton operation">=</button>
+            </div>
         </div>
-        <div class="secondRow">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="multiplyButton">*</button>
-        </div>
-        <div class="thirdRow">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class="subtractButton">-</button>
-        </div>
-        <div class="fourthRow">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button class="addButton">+</button>
-        </div>
-        <div class="lastRow">
-            <button>0</button>
-            <button>.</button>
-            <button class="equalButton">=</button>
-        </div>
-    </div>
+    </main>
     <script src="app.js"></script>
 </body>
 
