Add The logic of linking the  basic functions and the printing& clearing on the display

--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
             <div class="display">000</div>
             <div class="firstRow">
                 <button class="clearButton">AC</button>
-                <button class="changeSign ">+/-</button>
-                <button class="percentage number ">%</button>
-                <button class="divideButton number operation">/</button>
+                <button class="changeSign OPERATOR">+/-</button>
+                <button class="percentage number OPERATOR">%</button>
+                <button class="divideButton number operation OPERATOR">/</button>
             </div>
             <div class="secondRow">
                 <button class="number">7</button>
                 <button class="number">8</button>
                 <button class="number">9</button>
-                <button class="multiplyButton number operation">*</button>
+                <button class="multiplyButton number operation OPERATOR">*</button>
             </div>
             <div class="thirdRow">
                 <button class="number">4</button>
                 <button class="number">5</button>
                 <button class="number">6</button>
-                <button class="subtractButton number operation">-</button>
+                <button class="subtractButton number operation OPERATOR">-</button>
             </div>
             <div class="fourthRow">
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button class="addButton number operation">+</button>
+                <button class="addButton number operation OPERATOR">+</button>
             </div>
             <div class="lastRow">
                 <button class="number zeroButton">0</button>
                 <button>.</button>
-                <button class="equalButton operation">=</button>
+                <button class="equalButton operation ">=</button>
             </div>
         </div>
     </main>
