--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="lastRow">
                 <button class="number zeroButton">0</button>
-                <button class="">.</button>
+                <button class="percision">.</button>
                 <button class="equalButton operation ">=</button>
             </div>
         </div>
